--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "getversion": "npm -s run env echo '$npm_package_version'",
-    "install-local-linux": "pip3 uninstall celulartable -y && python3 setup.py bdist_wheel && VERSION=`npm -s run env echo '$npm_package_version'` && pip3 install dist/celulartable-$VERSION-py3-none-any.whl",
+    "install-local-linux": "pip3 uninstall celulartable -y && python3 setup.py bdist_wheel && VERSION=`npm -s run env echo $npm_package_version` && pip3 install dist/celulartable-$VERSION-py3-none-any.whl",
     "install-local-windows": "",
     "release": "standard-version"
   },
@@ -35,5 +35,18 @@
       "pre-commit": "lint-staged"
     }
   },
-  "homepage": "https://github.com/Kyostenas/celulartable#readme"
+  "homepage": "https://github.com/Kyostenas/celulartable#readme",
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "commitizen": "^4.2.5",
+    "conventional-github-releaser": "^1.1.7",
+    "eslint": "^8.23.0",
+    "git-authors-cli": "^1.0.44",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.7.1",
+    "standard-version": "^9.5.0"
+  }
 }
